--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -23,24 +23,24 @@
         <div id="navlogo">
           <a href=""><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt=""></a>
         </div>
-        <a class="navbar-brand" href="index.html"><span class="brandname">Men's Hub </span></a>
+        <a class="navbar-brand" href="#"><span class="brandname">Men's Hub </span></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
+        <a href="/logout" style="text-decoration: none; color: white; font-weight: bold; margin-left: 439px;">logout</a>
         <div class="collapse navbar-collapse" id="navbarsFurni">
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item active"><a class="nav-link" href="/home">Home</a></li>
             <li><a class="nav-link" href="/shop">Shop</a></li>
             <li><a class="nav-link" href="/about">About us</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
             <li><a class="nav-link" href="/service">My Account</a></li>
           </ul>
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li><a href="wishlist.html"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a></li>
+            <li><a href="/wishlist"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a></li>
             <li><a class="nav-link" href="#"><img src="/images/user.svg" /></a></li>
-            <li><a class="nav-link" href="cart.html"><img src="/images/cart.svg" /></a></li>
+            <li><a class="nav-link" href="/cart"><img src="/images/cart.svg" /></a></li>
           </ul>
         </div>
       </div>
