--- a/views/users/starting.ejs
+++ b/views/users/starting.ejs
@@ -60,9 +60,9 @@
         <div class="collapse navbar-collapse" id="navbarsFurni">
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/home">Home</a>
             </li>
-            <li><a class="nav-link" href="/shop">Shop</a></li>
+            <li><a class="nav-link" href="/login">Shop</a></li>
             <li><a class="nav-link" href="/about">About us</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
           </ul>
@@ -76,14 +76,14 @@
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li>
               <a href="wishlist.html">
-                <a href="wishlist.html"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
+                <a href="/login"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
               </a>
             </li>
             <li>
-              <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
+              <a class="nav-link" href="/login"><img src="/images/user.svg" /></a>
             </li>
             <li>
-              <a class="nav-link" href="cart.html"
+              <a class="nav-link" href="#"
                 ><img src="/images/cart.svg"
               /></a>
             </li>
